k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: habit-tracker
  namespace: habit-tracker-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: habit-tracker
  template:
    metadata:
      labels:
        app: habit-tracker
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: app
          image: habit-tracker-app:1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
      volumes:
        - name: tmp
          emptyDir: { }

---
apiVersion: v1
kind: Service
metadata:
  name: habit-tracker
  namespace: habit-tracker-dev
spec:
  type: ClusterIP
  selector:
    app: habit-tracker
  ports:
    - port: 8080
      targetPort: 8080
