k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: habit-tracker-ingress
  namespace: habit-tracker-dev
spec:
  ingressClassName: nginx
  rules:
    - host: grits.habittracker.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: habit-tracker
                port:
                  number: 8080
